# upower

rpm/: upower-bme.spec
upower/: configure.ac
upower/src/: Makefile.am
upower/src/bme/: Makefile.am  bmeipc.c  bmeipc.h  up-backend.c  up-bme-native.h  up-native.c
